--- a/app/views/classmates/edit.html.erb
+++ b/app/views/classmates/edit.html.erb
@@ -4,6 +4,7 @@
       <%= bootstrap_form_for(@classmate) do |f| %>
         <%= f.text_field :name, placeholder: "Input your name..." %>
         <%= f.text_area :motto, placeholder: "Input your quote ...", label: "Quote" %>
+        <%= f.file_field :image, label:"Upload Image" %>
         <div class="row">
            <div class="col-md-1">
                <%= link_to "Back", classmate_path, class: "btn btn-warning" %>
