--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,18 +10,39 @@
   </head>
 
   <body>
-      <p class="navbar-text pull-right">
-          <% if user_signed_in? %>
-            Logged in as <strong><%= current_user.email %></strong>.
-            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-            <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-          <% else %>
-            <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-            <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-          <% end %>
-          </p>
-      <p id="notice"><%= notice %></p>
 
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+      <div class="container">
+        <a >
+          <%= link_to  "Basic Rails", classmates_path, class:"navbar-brand js-scroll-trigger" %>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+
+            <% if user_signed_in? %>
+            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'nav-link js-scroll-trigger' %> 
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'nav-link js-scroll-trigger'  %>
+            <a class="nav-link"> Logged in as <strong><%= current_user.email %></strong></a>
+
+            <% else %>
+            <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link js-scroll-trigger'  %> 
+            <%= link_to "Login", new_user_session_path, :class => 'nav-link js-scroll-trigger'  %>
+            <% end %>
+
+         
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    
+      <p id="notice"><%= notice %></p>
+    <hr>
     <%= yield %>
     <% if notice %>
     <p class="alert alert-success"><%= notice %></p>
